@@ -1,6 +1,11 @@
 # ChangeLog for sys-apps/portage
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1322 2013/07/28 09:21:49 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1323 2013/07/29 17:53:18 zmedico Exp $
+
+  29 Jul 2013; Zac Medico <zmedico@gentoo.org> portage-2.1.13.1.ebuild,
+  portage-2.2.0_alpha190.ebuild:
+  Adjust DISTDIR permissions last in pkg_postinst, in case the user is tempted
+  to kill it. Also remove obsolete WORLD_MIGRATION_UPGRADE code.
 
   28 Jul 2013; Michał Górny <mgorny@gentoo.org> portage-2.1.11.62.ebuild,
   portage-2.1.12.13.ebuild, portage-2.1.12.2.ebuild, portage-2.1.13.1.ebuild,
